        - fix issue with auto, if 0 is specified it wasn't acting like unlimited
          but stopping after first run
        - fix issue where --auto param wasn't being used when Tester was running
          in the background (ie. bbtester start)
        - remove Contributing and support sections in POD, updated copyright
          year (closes #175)

2.14    2017-04-07
        - added revision() to Git, returns the SHA1 sum for the most recent
          commit, for both local and remotes
        - added _separate_url() to Git. This is currently unused as we're not
          yet using Github's API to fetch commit info
        - added --auto|-a to bbdispatch, spins off an auto run
        - added auto() to Dispatch. Checks git commit revision numbers, and if
          different, we'll do a pull and run the test suite
        - added auto_sleep option to the config file for [Dispatch]. This is how
          long in seconds we sleep in between runs and run checks for --auto
        - added status() in Git, checks whether the current repo is ahead or
          behind in commits compared to remote
        - --auto flag to bbdispatch takes an integer, the number of runs to
          dispatch out. Send in 0 to run forever
        - fully added initial cut of CI automation (via bbdispatch as opposed to
          berrybrew) (closes #172)

2.13    2017-03-28
        - *NOTE* this release has been tested on win7 with berrybrew v1.10, but
          on win10, there may be issues. This is due to an internal library in
          that project that is questionable on win10 (Ionic.Zip). This is being
          investigated, and an update is planned. I wouldn't recommend trusting
          this distribution on Windows 10 at this time for that reason. The
          problem stems from the fact that the portable Strawberry Perl that
          is being installed is not always extracted fully, despite the fact the